--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
                     <div class="card-body">
                         {{ i.task }}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href="{% url 'mark_as_done' i.pk%}" type = "submit" class="btn btn-success" ><i class="fa fa-check"></i> Mark as Done</a>
                             <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
                             <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
@@ -41,16 +41,19 @@
                 {% endfor %}
                
             </div>
+            
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
+                {% for i in completed_tasks %}
                 <!-- List of all the tasks that have completed -->
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                        {{i.task}}
                     </div>
                 </div>
+                {% endfor %}
             </div>
-        </div>
+            
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
